<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ScheduleMyTweetsActivity!</string>
    <string name="app_name">Schedule My Tweets</string>
    <string name="dropdown_duration_prompt">Select time</string>
    <string name="duration_textview_text">Select delay for tweet: </string>
    <string name="edittext_tweet_hint">Enter tweet</string>
    <string name="button_submit_label">Submit</string>
    <string name="titlebar_text">List of Scheduled Tweets</string>
    <string name="titlebar_text_newtweet">Schedule New Tweet</string>
    <string name="titlebar_text_tweetdetail">Tweet Details</string>
    <string name="empty_tweet_list_text">No tweets scheduled yet!\n\nSchedule tweets by clicking\non the + icon at the top right\ncorner.</string>
    <string name="tweet_details_time_label">Scheduled for:</string>
    <string name="delete_tweet_button_text">Delete this tweet</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_tweet">New Tweet</string>    
    <string name="welcome_dialog_title">Welcome to Schedule My Tweets!</string>
    <string name="welcome_dialog_message">Click OK to sign in using Twitter</string>
    <string name="login_dialog_message">You\'ve been logged in!\n\nYou can now schedule tweets using the + button at the top right corner of the screen</string>
    <string name="logout_dialog_message">Are you sure you want to log out?</string>
    <string name="delete_tweet_dialog_message">Are you sure you want to delete this tweet?</string>
    <string name="radiobutton_time_text">Select time for tweet:</string>
    <string name="button_select_date_text">Today</string>
    <string name="button_select_time_text">Select Time</string>
    <string name="toast_time_unset">Time is not set</string>
    <string name="default_tweetchar_text">140 / 140</string>
    <string-array name="dropdown_duration_options">
        <item>After 5 minutes</item>
        <item>After 10 minutes</item>
        <item>After 30 minutes</item>
        <item>After 1 hour</item>
        <item>After 3 hours</item>
        <item>After 12 hours</item>
        <item>After 24 hours</item>
    </string-array>
</resources>
